# Vyronix_AI

./: .gitignore  README.md  config.py  pyproject.toml  test_rag.py
agent/: agent.py  graph.py  prompts.py  tools.py
backend/: main.py
frontend/: index.html  script.js  style.css
memory/: chat_memory.py
rag/: pipeline.py  retriever.py  vector_store.py
rag/loaders/: docx_loader.py  pdf_loader.py  txt_loader.py  universal_loader.py  web_loader.py
speech/: stt.py  tts.py
vision/: camera.py  ocr.py  scene_memory.py  test_vision.py  yolo_detector.py
