[project]
name = "vyronix-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "docx2txt>=0.9",
    "easyocr>=1.7.2",
    "edge-tts>=7.2.8",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "lxml>=6.1.1",
    "opencv-python>=5.0.0.93",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scipy>=1.17.1",
    "sentence-transformers>=5.6.0",
    "sounddevice>=0.5.5",
    "ultralytics>=8.4.103",
    "uvicorn>=0.51.0",
]
